# todo-app-backend

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
.github/workflows/: 12-azure-deployment-version_todo-app-backend.yml  azure-webapps-python.yml  main_todo-app-backend.yml
.trunk/: trunk.yaml
todo/api_v1/: authentication.py  config.py  main.py
todo/api_v1/database/: base_actions.py  config.py
todo/api_v1/database/actions/: todo_actions.py  user_actions.py
todo/api_v1/database/models/: todo_model.py  user_model.py
todo/api_v1/dependencies/: database.py
todo/api_v1/routers/: todo_router.py  user_router.py
todo/api_v1/schemas/: error_response_schema.py  todo_schema.py  user_schema.py
todo/api_v1/utils/: error_handler.py
