[tool.poetry]
name = "todo-app-backend"
version = "1.0"
description = "Backend API for Todo Web App."
authors = ["Abiodun Akinola <akinolaemmanuel49@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
SQLAlchemy = "^1.4.35"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
