[tool.poetry]
name = "todo-app-backend"
version = "1.0"
description = "Backend API for Todo Web App."
authors = ["Abiodun Akinola <akinolaemmanuel49@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
SQLAlchemy = { extras = ["postgres"], version = "^1.4.35" }
uvicorn = {extras = ["standard"], version = "^0.17.6"}
psycopg2 = "^2.9.3"
PyJWT = "^2.4.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic = { extras = ["email"], version = "^1.9.0" }
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
cloudinary = "^1.29.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
